libweva/include/weva_c.h

typedef struct weva_document* weva_document_t;
/* Unicode facts a host's shaper needs, answered from the core's own tables
 * (ABI minor 40). The core hands a host one bidi run at a time to shape, and
 * expects the glyphs back in VISUAL order: a shaper with its own Unicode
 * data (the Godot host's TextServer) decides direction, mirroring and Arabic
 * joining itself; one without (the Unity host's FontEngine, which only
 * substitutes and positions glyphs) asks here, so the two hosts agree with
 * each other and with the core's bidi resolution.
 *
 * weva_text_direction: 1 when the first strong character of the UTF-8 text
 * is right-to-left (bidi class R or AL), 0 otherwise -- the direction an
 * auto-detecting shaper would pick for the run. */
int32_t weva_text_direction(const char* utf8, size_t length);
/* The Bidi_Mirroring_Glyph of a code point (`(` for `)`), or the code point
 * itself when it has none. A right-to-left run draws the mirrored character
 * (UAX #9 L4). */
uint32_t weva_char_mirror(uint32_t codepoint);
/* The Unicode Joining_Type of a code point (ArabicShaping.txt): 0 non-joining,
 * 1 right-joining, 2 left-joining, 3 dual-joining, 4 join-causing (ZWJ,
 * tatweel), 5 transparent (a combining mark, which joins through). */
int32_t weva_char_joining_type(uint32_t codepoint);
/* The ISO 15924 code of a code point's script, four ASCII letters packed
 * big-endian (`Arab` is 0x41726162): `Zyyy` for common (punctuation, digits),
 * `Zinh` for inherited (combining marks), `Zzzz` for unknown. Lower-cased it
 * is the OpenType script tag for most scripts. */
uint32_t weva_char_script(uint32_t codepoint);
/* Every family name the document's author styles ask for -- `font-family`
 * (and expanded `font`) declarations in its stylesheets and in elements'
 * inline `style` attributes -- one per line, first-seen order, as the author
 * wrote it with the quotes stripped; generic families (`sans-serif`,
 * `system-ui`, ...) and CSS-wide keywords are left out. A browser draws
 * `font-family: "Segoe UI"` with the installed Segoe UI; a host that can
 * reach installed fonts by name asks here after set_css and registers the
 * ones it has (weva_document_register_font_family), leaving families a
 * @font-face rule or the game already claimed alone. Two-call convention.
 * Available since ABI minor 41. */
size_t weva_document_font_family_names(weva_document_t doc, char* buffer, size_t capacity);