Packages/com.wevaui/Runtime/Native/WevaNative.g.cs

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_text_direction(byte* utf8, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_char_mirror(uint codepoint);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_char_joining_type(uint codepoint);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_char_script(uint codepoint);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_font_family_names(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_unity_sizeof(byte* struct_name);
    }
}
